// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-loose ant-formily-item-label-align-right ant-formily-item-control-align-left"
    data-span="1"
  >
    <div
      class="ant-formily-item-label"
    >
      <div
        class="ant-formily-item-label-content"
      >
        <label>
          选择框
        </label>
      </div>
      <span
        class="ant-formily-item-colon"
      >
        :
      </span>
    </div>
    <div
      class="ant-formily-item-control"
    >
      <div
        class="ant-formily-item-control-content"
      >
        <div
          class="ant-formily-item-control-content-component"
        >
          <div
            class="ant-tree ant-tree-icon-hide"
          >
            <div
              role="tree"
            >
              <input
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                tabindex="0"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="ant-tree-indent"
              >
                <div
                  class="ant-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-tree-list"
              style="width: 200px; position: relative;"
            >
              <div
                class="ant-tree-list-holder"
              >
                <div>
                  <div
                    class="ant-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher_open"
                      >
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-tree-switcher-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                        title="选项1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          选项1
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node1
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node2
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node3"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node3
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher_open"
                      >
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-tree-switcher-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                        title="选项2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          选项2
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node3"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node3
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node4"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node4
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node5"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    {}
  </div>
</DocumentFragment>
`;

exports[`Multiple 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-loose ant-formily-item-label-align-right ant-formily-item-control-align-left"
    data-span="1"
  >
    <div
      class="ant-formily-item-label"
    >
      <div
        class="ant-formily-item-label-content"
      >
        <label>
          选择框
        </label>
      </div>
      <span
        class="ant-formily-item-colon"
      >
        :
      </span>
    </div>
    <div
      class="ant-formily-item-control"
    >
      <div
        class="ant-formily-item-control-content"
      >
        <div
          class="ant-formily-item-control-content-component"
        >
          <div
            class="ant-tree ant-tree-icon-hide ant-tree-block-node ant-tree-show-line"
          >
            <div
              role="tree"
            >
              <input
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                tabindex="0"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="ant-tree-indent"
              >
                <div
                  class="ant-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-tree-list"
              style="width: 200px; position: relative;"
            >
              <div
                class="ant-tree-list-holder"
              >
                <div>
                  <div
                    class="ant-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher_open"
                      >
                        <span
                          aria-label="minus-square"
                          class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="minus-square"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                            />
                            <path
                              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                        title="选项1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          选项1
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          aria-label="file"
                          class="anticon anticon-file ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="file"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node1
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          aria-label="file"
                          class="anticon anticon-file ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="file"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node2
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          aria-label="file"
                          class="anticon anticon-file ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="file"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node3"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node3
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher_open"
                      >
                        <span
                          aria-label="minus-square"
                          class="anticon anticon-minus-square ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="minus-square"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                            />
                            <path
                              d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                        title="选项2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          选项2
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          aria-label="file"
                          class="anticon anticon-file ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="file"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node3"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node3
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          aria-label="file"
                          class="anticon anticon-file ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="file"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node4"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node4
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      >
                        <span
                          aria-label="file"
                          class="anticon anticon-file ant-tree-switcher-line-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="file"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node5"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    {}
  </div>
</DocumentFragment>
`;

exports[`None 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-loose ant-formily-item-label-align-right ant-formily-item-control-align-left"
    data-span="1"
  >
    <div
      class="ant-formily-item-label"
    >
      <div
        class="ant-formily-item-label-content"
      >
        <label>
          选择框
        </label>
      </div>
      <span
        class="ant-formily-item-colon"
      >
        :
      </span>
    </div>
    <div
      class="ant-formily-item-control"
    >
      <div
        class="ant-formily-item-control-content"
      >
        <div
          class="ant-formily-item-control-content-component"
        >
          <div
            class="ant-tree ant-tree-icon-hide"
          >
            <div
              role="tree"
            >
              <input
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                tabindex="0"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="ant-tree-indent"
              >
                <div
                  class="ant-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-tree-list"
              style="width: 200px; position: relative;"
            >
              <div
                class="ant-tree-list-holder"
              >
                <div>
                  <div
                    class="ant-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    {}
  </div>
</DocumentFragment>
`;

exports[`User 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-loose ant-formily-item-label-align-right ant-formily-item-control-align-left"
    data-span="1"
  >
    <div
      class="ant-formily-item-label"
    >
      <div
        class="ant-formily-item-label-content"
      >
        <label>
          选择框
        </label>
      </div>
      <span
        class="ant-formily-item-colon"
      >
        :
      </span>
    </div>
    <div
      class="ant-formily-item-control"
    >
      <div
        class="ant-formily-item-control-content"
      >
        <div
          class="ant-formily-item-control-content-component"
        >
          <div
            class="ant-tree ant-tree-icon-hide"
          >
            <div
              role="tree"
            >
              <input
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                tabindex="0"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="ant-tree-indent"
              >
                <div
                  class="ant-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-tree-list"
              style="width: 200px; position: relative;"
            >
              <div
                class="ant-tree-list-holder"
              >
                <div>
                  <div
                    class="ant-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher_open"
                      >
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-tree-switcher-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                        title="选项1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          选项1
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node1"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node1
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node2
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-start"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node3"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node3
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      />
                      <span
                        class="ant-tree-switcher ant-tree-switcher_open"
                      >
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-tree-switcher-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                        title="选项2"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          选项2
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node3"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node3
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node4"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node4
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-tree-indent"
                      >
                        <span
                          class="ant-tree-indent-unit ant-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="ant-tree-switcher ant-tree-switcher-noop"
                      />
                      <span
                        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                        title="Child Node5"
                      >
                        <span
                          class="ant-tree-title"
                        >
                          Child Node5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    {}
  </div>
</DocumentFragment>
`;
